fixed title size on mobile

--- a/style/_mobile.scss
+++ b/style/_mobile.scss
@@ -200,7 +200,7 @@
             height: 6vh;
         }
         .app-title{
-            font-size: 4.75rem;
+            font-size: 4.2rem;
         }
         .splice-clear-container{
             min-height: 1rem;
@@ -257,7 +257,7 @@
             height: 9vh;
         }
         .app-title{
-            font-size: 4.2rem;
+            font-size: 4rem;
         }
         .array-simulator{
             height: 25rem;
