--- a/style/style.css
+++ b/style/style.css
@@ -324,7 +324,7 @@ button:hover {
     height: 6vh;
   }
   #main-page .app-title {
-    font-size: 4.75rem;
+    font-size: 4.2rem;
   }
   #main-page .splice-clear-container {
     min-height: 1rem;
@@ -372,7 +372,7 @@ button:hover {
     height: 9vh;
   }
   #main-page .app-title {
-    font-size: 4.2rem;
+    font-size: 4rem;
   }
   #main-page .array-simulator {
     height: 25rem;
